--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        Cosmological Redshift Simulator
+        Foothill AstroSims Cosmological Redshift Simulator
     </title>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet" />
@@ -82,7 +82,7 @@
                         <br>
                         <br>
 
-                        This simulator is part of the Foothill AstroSims project, which is aiming to develop new simulations for astronomy education and reimplement, in HTML5, Flash-based simulations that are used in Foothill Astronomy courses.
+                        This simulator is part of the <a href="https://foothill.edu/astronomy/astrosims.html" target="_blank">Foothill AstroSims project</a>, which is aiming to develop new simulations for astronomy education and reimplement, in HTML5, Flash-based simulations that are used in Foothill Astronomy courses.
 
                         <br>
                         <br>
