Fixed css for cross-browser compatibility

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>
-        Foothill AstroSims Cosmological Redshift Simulator
+        Foothill AstromSims Cosmological Redshift Simulator
     </title>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet" />
 
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/top-half.css">
+    <link rel="stylesheet" type="text/css" href="./css/bottom-half.css">
+    <link rel="stylesheet" type="text/css" href="./css/input-range.css">
 </head>
 
 <body>
 
 <div class="siteWrapper">
-    <div class="container">
-        <div id="React-Simulation"></div>
-    </div>
+    <div id="React-Simulation"></div>
 
     <div aria-hidden="true" aria-labelledby="helpModalLabel" class="modal" id="helpModal" role="dialog" tabindex="-1">
         <div class="modal-dialog" role="document">
